test/spec_vectors/type-subtyping/fail/module_72.wat
(module (type $a (sub (struct (field (mut (ref any)))))) (type $b (sub $a (struct (field (mut (ref none)))))))